src/createForm.css
#form{
    width: max(40%, 250px);
    height: max-content;
    position: absolute;
    top: 20%;
    gap: 10px;
    padding: 10px;
    left: 50%;
    margin-left: calc(-1 * max(40%, 250px) * 0.5);
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    background-color: var(--background);
    border: solid 2px var(--blue);
}

#form > *{
    display: block;
}
#form > textarea{
    height: 20vh;
}
#form > button[type = 'submit']{
    width: 20%;
    height: 15%;
    background-color: var(--blue);
    border: none;
    border-left: 5px solid var(--pink);
}
#closeButton{
    position: absolute;
    width: 20px;
    height: 20px;
    border: none;
    background-color: transparent;
    background-image: url('./close.png');
    background-position: center;
    background-size: contain;
    top: 0%;
    right: 0%;
}
#closeButton:hover{
    animation: rotate 1s ease-in 100ms 1 forwards;
}
@keyframes rotate {
    100%{
        transform: rotate(360deg);
    }
}

